# invenio-records-resources

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  babel.ini  constraints-min.txt  pyproject.toml  pytest.ini  requirements-devel.txt  requirements-feature.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-pull.yml  i18n-push.yml  pypi-publish.yml  tests-feature.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_records_resources/: __init__.py  config.py  errors.py  ext.py  links.py  notifications.py  pagination.py  proxies.py  registry.py  resource_unit.py  resource_units.py  responses.py  serializers.py  tasks.py  version.py
invenio_records_resources/factories/: __init__.py  errors.py  factory.py  record.py  record_links_schema.py  record_metadata.py  record_search_link_schema.py  validation.py
invenio_records_resources/linker/: base.py  builders.py  pagination.py  urlutils.py
invenio_records_resources/links/: __init__.py  base.py  builders.py  pagination.py  schema.py  urlutils.py
invenio_records_resources/record/: __init__.py  pid_manager.py  pid_record.py
invenio_records_resources/records/: __init__.py  api.py  dumpers.py  models.py  providers.py  resolver.py  storage.py  transfer.py
invenio_records_resources/records/jsonschemas/: __init__.py  definitions-v1.0.0.json  definitions-v2.0.0.json
invenio_records_resources/records/systemfields/: __init__.py  calculated.py  entity_reference.py  files.py  index.py  pid.py  pid_status.py  pid_statuscheck.py  relations.py
invenio_records_resources/references/: __init__.py  grants.py  registry.py
invenio_records_resources/references/entity_resolvers/: __init__.py  base.py  records.py  results.py
invenio_records_resources/references/resolvers/: __init__.py  base.py  records.py  users.py
invenio_records_resources/resources/: __init__.py  errors.py  file.py  file_config.py  record.py  record_args.py  record_config.py  record_response.py  schema.py
invenio_records_resources/resources/actions/: __init__.py  config.py  errors.py  resource.py
invenio_records_resources/resources/files/: __init__.py  args.py  config.py  loaders.py  parser.py  resource.py  response.py  schemas_links.py
invenio_records_resources/resources/records/: __init__.py  args.py  config.py  errors.py  headers.py  resource.py  schemas_header.py  schemas_links.py  schemas_url_args.py  utils.py
invenio_records_resources/schemas/: __init__.py  json.py  permissions.py  url_args.py  utils.py
invenio_records_resources/schemas/fields/: __init__.py  generated.py  marshmallow_contrib.py  persistent_identifier.py  sanitized_unicode.py
invenio_records_resources/search/: engine.py  errors.py  query.py
invenio_records_resources/serializers/: __init__.py  json.py  xml.py
invenio_records_resources/service/: __init__.py  errors.py  file_metadata_service.py  file_service.py  identity.py  record_service.py  service.py  state.py
invenio_records_resources/service/search/: __init__.py  query.py  serializers.py
invenio_records_resources/services/: __init__.py  actions.py  components.py  data_schema.py  data_validator.py  errors.py  file.py  file_metadata.py  file_metadata_service.py  record.py  record_service.py  resolver.py  schemas.py  service.py  uow.py
invenio_records_resources/services/base/: __init__.py  components.py  config.py  links.py  results.py  service.py  utils.py
invenio_records_resources/services/custom_fields/: __init__.py  base.py  boolean.py  date.py  errors.py  mappings.py  number.py  schema.py  service.py  text.py  validate.py  vocabulary.py
invenio_records_resources/translations/: messages.pot
invenio_resources/: __init__.py  config.py  errors.py  ext.py  links.py  responses.py  serializers.py  version.py
invenio_resources/resources/: __init__.py  record.py
invenio_resources/schemas/: __init__.py  json.py
invenio_resources/service/: __init__.py  actions.py  errors.py  identity.py  resolver.py  service.py  state.py
tests/: __init__.py  conftest.py  test_alembic.py  test_faceting.py  test_invenio_resources.py  test_links.py  test_pagination.py  test_permissions.py  test_record_resource.py  test_serialization_integration.py  test_sorting.py  test_tasks.py
tests/api/: test_record_resource.py
tests/factories/: __init__.py  conftest.py  test_factory.py  test_service.py
tests/mock_module/: __init__.py  api.py  config.py  extractor.py  models.py  permissions.py  resource.py  schema.py  schemas.py  search.py  service.py
tests/mock_module_factory/: __init__.py  grants.py
tests/records/: conftest.py  test_api.py  test_dumpers.py  test_systemfield_files.py  test_systemfield_index.py  test_systemfield_modelpid.py  test_systemfield_pid.py  test_systemfield_pidstatus.py
tests/resources/: conftest.py  test_faceting.py  test_files_resource.py  test_invenio_resources.py  test_pagination.py  test_permissions.py  test_record_resource.py  test_resource_configuration.py  test_resource_faceting.py  test_resource_links.py  test_resource_pagination.py  test_resource_preference.py  test_resource_sorting.py  test_resources.py  test_resources_etag.py  test_serialization_integration.py  test_sorting.py
tests/service/: conftest.py  test_data_validator.py  test_service.py
tests/services/: __init__.py  conftest.py  files_utils.py  test_configuration.py  test_data_validator.py  test_facets.py  test_file_service.py  test_files_options.py  test_links.py  test_results.py  test_results_expand.py  test_service.py  test_service__create.py  test_service_configuration.py  test_service_create.py  test_service_create_update.py  test_service_date_facet.py  test_service_facets.py  test_service_filter.py  test_service_pagination.py  test_service_queryparser.py  test_service_relation_propagation.py  test_service_revision_id.py  test_service_sort.py  test_utils.py
(+178 files in other folders)
