# SPDX-FileCopyrightText: 2020-2024 CERN.
# SPDX-FileCopyrightText: 2020-2021 Northwestern University.
# SPDX-FileCopyrightText: 2022-2026 Graz University of Technology.
# SPDX-FileCopyrightText: 2023-2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-records-resources"
description = "Invenio resources module to create REST APIs."
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "api_blueprints",
  "invenio",
  "records",
  "rest",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "babel-edtf>=1.1.0",
  "flask-resources>=1.0.0,<2.0.0",
  "invenio-accounts>=9.0.0,<10.0.0",
  "invenio-base>=2.4.0,<3.0.0",
  "invenio-db>=2.2.0,<3.0.0",
  "invenio-files-rest>=6.0.0,<7.0.0",
  "invenio-i18n>=4.0.0,<5.0.0",
  "invenio-indexer>=6.0.0,<7.0.0",
  "invenio-jsonschemas>=2.0.0,<3.0.0",
  "invenio-pidstore>=4.0.0,<5.0.0",
  "invenio-records>=6.0.0,<7.0.0",
  "invenio-records-permissions>=4.0.0,<5.0.0",
  "invenio-stats>=7.0.0,<8.0.0",
  "luqum>=0.11.0",
  "marshmallow-utils>=0.15.0,<1.0.0",
  "uritemplate>=3.0.1",
  "wand>=0.6.6,<0.7.0",
  "xmltodict~=0.12.0",
  "zipstream-ng>=1.3.4",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-records-resources"

[project.entry-points."invenio_base.api_apps"]
invenio_records_resources = "invenio_records_resources:InvenioRecordsResources"

[project.entry-points."invenio_base.apps"]
invenio_records_resources = "invenio_records_resources:InvenioRecordsResources"

[project.entry-points."invenio_celery.tasks"]
invenio_records_resources = "invenio_records_resources.tasks"
invenio_records_resources_files = "invenio_records_resources.services.files.tasks"

[project.entry-points."invenio_i18n.translations"]
messages = "invenio_records_resources"

[project.entry-points."invenio_jsonschemas.schemas"]
jsonschemas = "invenio_records_resources.records.jsonschemas"

[project.optional-dependencies]
elasticsearch7 = [
  "invenio-search[elasticsearch7]>=3.0.0,<4.0.0",
]
opensearch1 = [
  "invenio-search[opensearch1]>=3.0.0,<4.0.0",
]
opensearch2 = [
  "invenio-search[opensearch2]>=3.0.0,<4.0.0",
]
tests = [
  "invenio-app>=3.0.0,<4.0.0",
  "invenio-db[postgresql,mysql,versioning]>=2.2.0,<3.0.0",
  "invenio-s3>=6.0.0,<7.0.0",
  "pytest-black>=0.6.0",
  "pytest-invenio>=4.0.0,<5.0.0",
  "pytest-mock>=1.6.0",
  "sphinx>=5,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format
[tool.babel]
[tool.babel.compile_catalog]
directory = "invenio_records_resources/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "pyproject.toml"
output_file = "invenio_records_resources/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_records_resources/translations/messages.pot"
output_dir = "invenio_records_resources/translations/"

[[tool.babel.mappings]]
method = "javascript"
pattern = "**.js"
encoding = "utf-8"
extract_messages = "$._, jQuery._"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

[tool.hatch.version]
path = "invenio_records_resources/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_records_resources",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_records_resources --cov-report=term-missing'
filterwarnings = ["ignore::marshmallow.warnings.RemovedInMarshmallow4Warning"]
testpaths = "tests invenio_records_resources"
live_server_scope = "module"

# UV needs to be told explicitly which extras are conflicting:
# https://docs.astral.sh/uv/concepts/projects/config/#conflicting-dependencies
[tool.uv]
conflicts = [
  [
    { extra = "opensearch1" },
    { extra = "opensearch2" },
    { extra = "elasticsearch7" },
  ]
]
