# -*- coding: utf-8 -*-
#
# Copyright (C) 2020-2022 CERN.
# Copyright (C) 2020-2021 Northwestern University.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio-Records-Resources is free software; you can redistribute it and/or modify
# it under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-records-resources
version = attr: invenio_records_resources.__version__
description = "Invenio resources module to create REST APIs."
long_description = file: README.rst, CHANGES.rst
keywords = invenio records rest api_blueprints
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-records-resources
classifiers =
    Development Status :: 3 - Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    flask-resources>=0.8.1,<0.9.0
    invenio-accounts>=1.4.13
    invenio-base>=1.2.11
    invenio-files-rest>=1.3.0
    invenio-i18n>=1.3.2
    invenio-indexer>=1.2.6,<2.0.0
    invenio-jsonschemas>=1.1.3
    invenio-pidstore>=1.2.2
    invenio-records-permissions>=0.13.0,<0.14.0
    invenio-records>=1.7.3,<2.0.0
    luqum>=0.11.0
    marshmallow-utils>=0.5.3,<0.6.0
    uritemplate>=3.0.1
    wand>=0.6.6,<0.7.0
    xmltodict~=0.12.0

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    invenio-app>=1.3.2
    invenio-db[postgresql,mysql,versioning]>=1.0.14,<2.0
    pytest-invenio>=1.4.11,<2.0.0
    sphinx>=4.2.0,<5
elasticsearch7 =
    invenio-search[elasticsearch7]>=1.4.2,<2.0

[options.entry_points]
invenio_base.apps =
    invenio_records_resources = invenio_records_resources:InvenioRecordsResources
invenio_base.api_apps =
    invenio_records_resources = invenio_records_resources:InvenioRecordsResources
invenio_celery.tasks =
    invenio_records_resources = invenio_records_resources.tasks
invenio_i18n.translations =
    messages = invenio_records_resources
invenio_jsonschemas.schemas =
    jsonschemas = invenio_records_resources.records.jsonschemas

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = invenio_records_resources/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_records_resources/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_records_resources/translations/messages.pot
output-dir = invenio_records_resources/translations/

[update_catalog]
input-file = invenio_records_resources/translations/messages.pot
output-dir = invenio_records_resources/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_records_resources --cov-report=term-missing
testpaths = docs tests invenio_records_resources
